src/app/feature/pages/ddx-settings-page/ddx-settings-page.component.scss
@import '../../../../styles.scss';

:host {
  display: block;
  background: $ddx-dark-main;
  width: calc(100% - 5vw);
  margin: 10px;
  padding: 10px;
  box-sizing: border-box;

  .container {
    background: $ddx-dark-main;
    width: 100%;
    min-height: calc(100vh - 100px);
    max-width: $break-narrow-desktop;
    margin: 0px auto;
    padding: 10px;
    box-sizing: border-box;

    .settings-page__header {
      flex-direction: column;

      .settings-page__title {
        line-height: 40px;
      }

      .settings-page__sections {
        align-items: center;
        justify-content: space-between;
        padding-bottom: 3px;

        .settings-page__section-tab:not(:last-child) {
          margin-right: 3px;
        }
      }
      .settings-page__section-title {
        font-weight: bold;
      }
    }

    .settings-page__subtitle {
      font-size: 18px;
      line-height: 32px;
    }

    .settings-page__seperator {
      width: 100%;
      border-color: $ddx-dark-lightest;
    }

    .settings-page__content {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      height: 100%;
      width: 100%;
      flex: 1;

      .settings-page__info {
        margin: 10px 0;
      }
    }

    .parent-container {
      display: grid;
      grid-template-rows: 4fr 1fr;
      grid-template-columns: 100%;
      row-gap: 15px;
      grid-template-areas:
        'kyc-content__container'
        'kyc-buttons__container';

      min-height: calc(100vh - 240px);
      width: 100%;

      .kyc-content__container {
        grid-area: kyc-content__container;

        display: flex;
        flex-direction: column;
        justify-content: center;
      }

      .kyc-buttons__container {
        grid-area: kyc-buttons__container;

        display: flex;
        flex-direction: column;
        align-items: center;
        align-self: flex-end;

        .kyc-edit__buttons {
          width: 46%;
        }
      }

      .settings-page__info {
        margin: 20px 0;
        text-align: center;
      }

      .actions {
        display: flex;
        flex-direction: row;
        justify-content: space-between;

        pro-button {
          align-self: flex-end;
          width: 46%;
        }
      }
    }

    .password-hints-container {
      margin: 0px 0 10px 0;

      li {
        position: relative;
        font-size: 10px;
        margin: 0 2px;
        padding-left: 15px;
        transition: cubic-bezier(0.4, 0, 0.2, 1);

        &:before {
          content: '\2022';
          display: flex;
          width: 10px;
          height: 10px;
          position: absolute;
          top: 3px;
          left: 0;
          color: $ddx-light;
          font-size: 20px;
          align-items: center;
          justify-content: center;
        }

        &.approved {
          color: $ddx-green;

          &:before {
            color: $ddx-green;
          }
        }
      }
    }
  }
}

@media screen and (min-width: $break-narrow-mobile) {
  :host {
    width: calc(100% - 10vw);
    margin: 20px auto;
  }
}

@media screen and (min-width: $break-mobile) {
  :host {
    width: calc(100% - 22vw);
    margin: 40px auto;
    padding: 30px 10px;

    .container {
      .parent-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-self: center;

        min-height: 500px;

        .kyc-buttons__container {
          align-self: center;
        }

        .double-button__container {
          min-width: 40%;
        }
      }
    }

    section.container {
      height: fit-content;
      min-height: 550px;
      padding: 30px;

      .settings-page__header {
        flex-direction: row;
        justify-content: space-between;
      }

      .settings-page__sections {
        justify-content: flex-end;
      }
    }
  }
}

@media screen and (min-width: $break-tablet) {
  :host {
    width: calc(100% - 40vw);
  }
}

